# MrPeterBot

./: README.md
src/mr_peterbot_bringup/: CMakeLists.txt  package.xml
src/mr_peterbot_bringup/config/: controllers.yaml  params.yaml  ros_gz_bridge.yaml
src/mr_peterbot_bringup/launch/: display.launch.py
src/mr_peterbot_control/: CMakeLists.txt  package.xml
src/mr_peterbot_control/controllers/: circle_test.py  lqr_controller.py
src/mr_peterbot_control/include/mr_peterbot_control/: vehicle_controller.hpp
src/mr_peterbot_control/src/: vehicle_controller.cpp
src/mr_peterbot_description/: CMakeLists.txt  package.xml
src/mr_peterbot_description/launch/: display.launch.py
src/mr_peterbot_description/urdf/: mr_peterbot.urdf.xacro
src/mr_peterbot_description/worlds/: empty.sdf  neighbourhood.sdf
