<?xml version="1.0"?>
<package format="3">
  <name>mr_peterbot_control</name>
  <version>0.0.0</version>
  <description>Ackermann control node for Mr. Peterbot</description>
  <maintainer email="imadariaga_albizuri@outlook.com">imadariaga</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>